# site2skill

./: .gitignore  Cargo.toml  ISSUE.md  PR.md  README.md  pyproject.toml  test_agentskills_integration.py  test_fetch_site.py  test_integration.py  test_site2skill.py  test_url_filter.py
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
python/: CHANGELOG.md  README.md  pyproject.toml
python/site2skill/: __init__.py  __main__.py
scripts/: bench-run.sh  build-wheel.sh  build_wheels.py  generate_bench_site.py  run_benchmark.py  validate_benchmark.py
site2skill/: __init__.py  fetch_site.py  generate_skill_structure.py  main.py  url_filter.py  utils.py  validate_skill.py
site2skill/templates/: scripts_README.md
src/: lib.rs  main.rs  normalize.rs  url_filter.rs  utils.rs  validate.rs
src/convert/: html.rs  markdown.rs  mod.rs
src/fetch/: crawler.rs  mod.rs  robots.rs
src/skill/: mod.rs  package.rs  structure.rs
templates/: scripts_README.md  search_docs.py
tests/fixtures/site2skill/markdown/example.com/: index.md  specification.md
