[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site2skill"
version = "0.1.1"
description = "Turn any website into a Claude Skill"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "laiso", email = "laiso@users.noreply.github.com" }
]
keywords = ["claude", "agent", "skill", "documentation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "pyyaml>=6.0",
]

[project.scripts]
site2skill = "site2skill.main:main"

[tool.hatch.build.targets.wheel]
packages = ["site2skill"]

[tool.hatch.build.targets.sdist]
include = [
    "site2skill",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "skills-ref; python_version >= '3.11'",
]
