[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site2skill"
version = "0.2.0b1"
description = "Turn any documentation website into a Claude Agent Skill"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "laiso", email = "laiso@users.noreply.github.com" }
]
keywords = ["claude", "agent", "skill", "documentation", "cli", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.scripts]
site2skill = "site2skill:main"

[tool.hatch.build.targets.wheel]
packages = ["site2skill"]

[tool.hatch.build.targets.sdist]
include = [
    "site2skill",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
